--- a/Comms_Project/Comms_Project.vcxproj
+++ b/Comms_Project/Comms_Project.vcxproj
@@ -125,6 +125,9 @@
   <ItemGroup>
     <ClCompile Include="Hello.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="..\..\..\..\Desktop\Jpeg_Grey.jpeg" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
