--- a/Comms_Project/Comms_Project.vcxproj.filters
+++ b/Comms_Project/Comms_Project.vcxproj.filters
@@ -19,4 +19,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="..\..\..\..\Desktop\Jpeg_Grey.jpeg">
+      <Filter>Resource Files</Filter>
+    </Image>
+  </ItemGroup>
 </Project>
