--- a/Comms_Project/Comms_Project.vcxproj.filters
+++ b/Comms_Project/Comms_Project.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="Copy2.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Copy3.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Image Include="..\..\..\..\Desktop\Jpeg_Grey.jpeg" />
